refactor: aplicando cleancode em setup inicial e services